java version downgrade to java 8 & clean-up